nekobox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nekobox
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      targetPort: 80
