nekobox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nekobox
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nekobox.app.n3ko.co
      http:
        paths:
          - backend:
              service:
                name: nekobox
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: box.n3ko.co
      http:
        paths:
          - backend:
              service:
                name: nekobox
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nekobox.app.n3ko.co
        - box.n3ko.co
      secretName: nekobox-cert
